--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   http:
   provider:
+  badges:
   flutter:
     sdk: flutter
 
@@ -38,6 +39,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  lottie: ^2.1.0
 
 dev_dependencies:
   flutter_test:
